--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 <html lang="en-US">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Front Matter</title>
+<title>Home</title>
 <meta name="Keywords" content="Authored in PreTeXt">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script>window.MathJax = {
@@ -63,28 +63,28 @@
 </div></div>
 <nav xmlns:svg="http://www.w3.org/2000/svg" id="primary-navbar" class="navbar"><div class="container">
 <div class="navbar-top-buttons">
-<button class="sidebar-left-toggle-button button active" aria-label="Show or hide table of contents sidebar">Contents</button><div class="tree-nav toolbar toolbar-divisor-3"><span class="threebuttons"><a id="previousbutton" class="previous-button toolbar-item button" href="xiangli.html" title="Previous">Prev</a><a id="upbutton" class="up-button button toolbar-item" href="xiangli.html" title="Up">Up</a><a id="nextbutton" class="next-button button toolbar-item" href="Contents.html" title="Next">Next</a></span></div>
+<button class="sidebar-left-toggle-button button active" aria-label="Show or hide table of contents sidebar">Contents</button><div class="tree-nav toolbar toolbar-divisor-3"><span class="threebuttons"><a id="previousbutton" class="previous-button toolbar-item button" href="Contents.html" title="Previous">Prev</a><a id="upbutton" class="up-button button toolbar-item" href="Contents.html" title="Up">Up</a><a id="nextbutton" class="next-button button toolbar-item" href="contact.html" title="Next">Next</a></span></div>
 </div>
 <div class="navbar-bottom-buttons toolbar toolbar-divisor-4">
-<button class="sidebar-left-toggle-button button toolbar-item active">Contents</button><a class="previous-button toolbar-item button" href="xiangli.html" title="Previous">Prev</a><a class="up-button button toolbar-item" href="xiangli.html" title="Up">Up</a><a class="next-button button toolbar-item" href="Contents.html" title="Next">Next</a>
+<button class="sidebar-left-toggle-button button toolbar-item active">Contents</button><a class="previous-button toolbar-item button" href="Contents.html" title="Previous">Prev</a><a class="up-button button toolbar-item" href="Contents.html" title="Up">Up</a><a class="next-button button toolbar-item" href="contact.html" title="Next">Next</a>
 </div>
 </div></nav></header><div class="page">
 <div xmlns:svg="http://www.w3.org/2000/svg" id="sidebar-left" class="sidebar" role="navigation"><div class="sidebar-content">
 <nav id="toc"><ul>
-<li class="link frontmatter active"><a href="frontmatter-1.html" data-scroll="frontmatter-1"><span class="title">Front Matter</span></a></li>
+<li class="link frontmatter"><a href="frontmatter-1.html" data-scroll="frontmatter-1"><span class="title">Front Matter</span></a></li>
 <li class="link">
 <a href="Contents.html" data-scroll="Contents"><span class="codenumber">1</span> <span class="title">Contents</span></a><ul>
-<li><a href="home.html" data-scroll="home">Home</a></li>
+<li><a href="home.html" data-scroll="home" class="active">Home</a></li>
 <li><a href="contact.html" data-scroll="contact">Contact</a></li>
 </ul>
 </li>
 </ul></nav><div class="extras"><nav><a class="mathbook-link" href="https://pretextbook.org">Authored in PreTeXt</a><a href="https://www.mathjax.org"><img title="Powered by MathJax" src="https://www.mathjax.org/badge/badge.gif" alt="Powered by MathJax"></a></nav></div>
 </div></div>
-<main class="main"><div id="content" class="pretext-content"><section xmlns:svg="http://www.w3.org/2000/svg" class="frontmatter" id="frontmatter-1"><h2 class="heading"><span class="title">Xiang Li</span></h2>
-<div class="author">
-<div class="author-name">李想</div>
-<div class="author-info"></div>
-</div></section></div></main>
+<main class="main"><div id="content" class="pretext-content"><section xmlns:svg="http://www.w3.org/2000/svg" class="section" id="home"><h2 class="heading hide-type">
+<span class="type">Section</span> <span class="codenumber">1.1</span> <span class="title">Home</span>
+</h2>
+<p id="p-1">I'm Xiang Li 李想. Welcome to my personal website!</p>
+<p id="p-2">I'm a first year math PhD student in the University of Edinburgh working with Prof. Minhyong Kim. I am a member of Hodge Institute. My interest lies in arithmetic geometry, arithmetic topology and some mathematical physics.</p></section></div></main>
 </div>
 </body>
 </html>
