--- a/knowl/aside-1.html
+++ b/knowl/aside-1.html
@@ -14,8 +14,6 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
-<h6 xmlns:svg="http://www.w3.org/2000/svg" class="heading"><span class="type">Paragraph</span></h6>
-<p xmlns:svg="http://www.w3.org/2000/svg">Welcome to my personal website! Here is the definition of me.</p>
-<span class="incontext"><a href="home.html#p-1">in-context</a></span>
+<aside class="aside aside-like"><p xmlns:svg="http://www.w3.org/2000/svg">Am I the first person coming up with an idea to make the personal website look like a math book that contains definition/remark etc.?</p></aside><span class="incontext"><a href="home.html#aside-1">in-context</a></span>
 </body>
 </html>
