--- a/knowl/proof-1.html
+++ b/knowl/proof-1.html
@@ -14,8 +14,7 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
-<h6 xmlns:svg="http://www.w3.org/2000/svg" class="heading"><span class="type">Paragraph</span></h6>
-<p xmlns:svg="http://www.w3.org/2000/svg">Welcome to my personal website! Here is the definition of me.</p>
-<span class="incontext"><a href="home.html#p-1">in-context</a></span>
+<article class="hiddenproof"><h6 xmlns:svg="http://www.w3.org/2000/svg" class="heading"><span class="type">Proof</span></h6>
+<p xmlns:svg="http://www.w3.org/2000/svg">Just try it!</p></article><span class="incontext"><a href="contact.html#proof-1">in-context</a></span>
 </body>
 </html>
