--- a/knowl/aside-2.html
+++ b/knowl/aside-2.html
@@ -14,6 +14,6 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
-<aside class="aside aside-like"><p xmlns:svg="http://www.w3.org/2000/svg">Am I the first person coming up with an idea to make the personal website look like a math book that contains definition/remark etc.?</p></aside><span class="incontext"><a href="home.html#aside-1">in-context</a></span>
+<aside class="aside aside-like"><p xmlns:svg="http://www.w3.org/2000/svg">The diagram is called the Kim's cutter, which is my supervisor Prof.Minhyong Kim's work and I'm trying to understand it.</p></aside><span class="incontext"><a href="home.html#aside-2">in-context</a></span>
 </body>
 </html>
