--- a/codes.html
+++ b/codes.html
@@ -150,7 +150,10 @@ window.MathJax = {
 </li>
 <li class="toc-item toc-section">
 <div class="toc-title-box"><a href="teaching.html" class="internal"><span class="codenumber">1.6</span> <span class="title">Teaching</span></a></div>
-<ul class="structural toc-item-list"><li class="toc-item toc-subsection"><div class="toc-title-box"><a href="teaching.html#teaching-2" class="internal"><span class="codenumber">1.6.1</span> <span class="title">2023-2024 Semester 2</span></a></div></li></ul>
+<ul class="structural toc-item-list">
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="teaching.html#teaching-2" class="internal"><span class="codenumber">1.6.1</span> <span class="title">2023-2024 Semester 2</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="teaching.html#teaching-3" class="internal"><span class="codenumber">1.6.2</span> <span class="title">2024-2025 Semester 1</span></a></div></li>
+</ul>
 </li>
 <li class="toc-item toc-section active">
 <div class="toc-title-box"><a href="codes.html" class="internal"><span class="codenumber">1.7</span> <span class="title">Codes</span></a></div>
