--- a/home.html
+++ b/home.html
@@ -182,7 +182,7 @@ H_f^1(G_\mathbb{Q},U^{\text{é}\mathrm{t}}(X,p)) @&gt;{\mathrm{loc}}&gt;&gt; H_f
 \end{CD}
 \end{equation*}
 </div>
-<aside class="aside aside-like" id="home-7"><div class="para" id="home-7-1">The commutative diagram is called the Kim’s cutter, which is Prof.Minhyong Kim’s work and I’m trying to understand it.</div></aside><figure class="figure figure-like" id="fig-X13"><div class="image-box" style="width: 50%; margin-left: 25%; margin-right: 25%;"><img src="external/images/X13.jpg" class="contained"></div>
+<figure class="figure figure-like" id="fig-X13"><div class="image-box" style="width: 50%; margin-left: 25%; margin-right: 25%;"><img src="external/images/X13.jpg" class="contained"></div>
 <figcaption><span class="type">Figure</span><span class="space"> </span><span class="codenumber">1.1.3<span class="period">.</span></span><span class="space"> </span>The cursed curve, plotted using SageMath by Sachi Hashimoto</figcaption></figure></section></div>
 <div class="ptx-content-footer">
 <a class="previous-button button" href="Contents.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Top</span></a><a class="next-button button" href="contact.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a>
