--- a/Contents.html
+++ b/Contents.html
@@ -123,10 +123,7 @@ window.MathJax = {
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="contact.html" class="internal"><span class="codenumber">1.2</span> <span class="title">Contact</span></a></div></li>
 <li class="toc-item toc-section">
 <div class="toc-title-box"><a href="cv.html" class="internal"><span class="codenumber">1.3</span> <span class="title">CV</span></a></div>
-<ul class="structural toc-item-list">
-<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="cv.html#subsecedu" class="internal"><span class="codenumber">1.3.1</span> <span class="title">Educational Background</span></a></div></li>
-<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="cv.html#subsec-conference" class="internal"><span class="codenumber">1.3.2</span> <span class="title">Recent Activities (Conferences)</span></a></div></li>
-</ul>
+<ul class="structural toc-item-list"><li class="toc-item toc-subsection"><div class="toc-title-box"><a href="cv.html#subsecedu" class="internal"><span class="codenumber">1.3.1</span> <span class="title">Educational Background</span></a></div></li></ul>
 </li>
 <li class="toc-item toc-section">
 <div class="toc-title-box"><a href="writing.html" class="internal"><span class="codenumber">1.4</span> <span class="title">Writing</span></a></div>
@@ -148,18 +145,19 @@ window.MathJax = {
 <li class="toc-item toc-subsection"><div class="toc-title-box"><a href="talks.html#talks-3" class="internal"><span class="codenumber">1.5.2</span> <span class="title">Past Talks</span></a></div></li>
 </ul>
 </li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="travel.html" class="internal"><span class="codenumber">1.6</span> <span class="title">Travel</span></a></div></li>
 <li class="toc-item toc-section">
-<div class="toc-title-box"><a href="teaching.html" class="internal"><span class="codenumber">1.6</span> <span class="title">Teaching</span></a></div>
+<div class="toc-title-box"><a href="teaching.html" class="internal"><span class="codenumber">1.7</span> <span class="title">Teaching</span></a></div>
 <ul class="structural toc-item-list">
-<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="teaching.html#teaching-2" class="internal"><span class="codenumber">1.6.1</span> <span class="title">2023-2024 Semester 2</span></a></div></li>
-<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="teaching.html#teaching-3" class="internal"><span class="codenumber">1.6.2</span> <span class="title">2024-2025 Semester 1</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="teaching.html#teaching-2" class="internal"><span class="codenumber">1.7.1</span> <span class="title">2024-2025 Semester 1</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="teaching.html#teaching-3" class="internal"><span class="codenumber">1.7.2</span> <span class="title">2023-2024 Semester 2</span></a></div></li>
 </ul>
 </li>
 <li class="toc-item toc-section">
-<div class="toc-title-box"><a href="codes.html" class="internal"><span class="codenumber">1.7</span> <span class="title">Codes</span></a></div>
+<div class="toc-title-box"><a href="codes.html" class="internal"><span class="codenumber">1.8</span> <span class="title">Codes</span></a></div>
 <ul class="structural toc-item-list">
-<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="codes.html#subsec-" class="internal"><span class="codenumber">1.7.1</span> <span class="title"><span class="process-math">\(L\exists \forall N\)</span></span></a></div></li>
-<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="codes.html#codes-3" class="internal"><span class="codenumber">1.7.2</span> <span class="title">Numerical Library of Mathematics Algorithm</span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="codes.html#subsec-" class="internal"><span class="codenumber">1.8.1</span> <span class="title"><span class="process-math">\(L\exists \forall N\)</span></span></a></div></li>
+<li class="toc-item toc-subsection"><div class="toc-title-box"><a href="codes.html#codes-3" class="internal"><span class="codenumber">1.8.2</span> <span class="title">Numerical Library of Mathematics Algorithm</span></a></div></li>
 </ul>
 </li>
 </ul>
@@ -174,8 +172,9 @@ window.MathJax = {
 <li><a href="cv.html" class="internal"><span class="codenumber">1.3</span> <span class="title">CV</span></a></li>
 <li><a href="writing.html" class="internal"><span class="codenumber">1.4</span> <span class="title">Writing</span></a></li>
 <li><a href="talks.html" class="internal"><span class="codenumber">1.5</span> <span class="title">Talks</span></a></li>
-<li><a href="teaching.html" class="internal"><span class="codenumber">1.6</span> <span class="title">Teaching</span></a></li>
-<li><a href="codes.html" class="internal"><span class="codenumber">1.7</span> <span class="title">Codes</span></a></li>
+<li><a href="travel.html" class="internal"><span class="codenumber">1.6</span> <span class="title">Travel</span></a></li>
+<li><a href="teaching.html" class="internal"><span class="codenumber">1.7</span> <span class="title">Teaching</span></a></li>
+<li><a href="codes.html" class="internal"><span class="codenumber">1.8</span> <span class="title">Codes</span></a></li>
 </ul></nav></section></div>
 <div class="ptx-content-footer">
 <a class="previous-button button" href="xiangli-2.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Top</span></a><a class="next-button button" href="home.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a>
